Build/Test Tools: Fix Slack message payload generation.
The JSON string set as an output for the Slack message payload needs to be one line to prevent causing errors. This ensures `jq` returns a compact JSON string.

Follow up to [59679].

Props johnbillion.
See #62221.

git-svn-id: https://develop.svn.wordpress.org/trunk@59681 602fd350-edb4-49c9-b593-d223f7449a82

--- a/.github/workflows/slack-notifications.yml
+++ b/.github/workflows/slack-notifications.yml
@@ -160,7 +160,7 @@ jobs:
             --arg ref_name "${CURRENT_BRANCH}" \
             --arg run_url "https://github.com/WordPress/wordpress-develop/actions/runs/${GITHUB_RUN_ID}/attempts/${GITHUB_RUN_ATTEMPT}" \
             --arg commit_message "${COMMIT_MSG}" \
-            '{workflow_name: $workflow_name, ref_name: $ref_name, run_url: $run_url, commit_message: $commit_message}'
+            '{workflow_name: $workflow_name, ref_name: $ref_name, run_url: $run_url, commit_message: $commit_message}' | jq -c .
           )"
           echo "payload=$PAYLOAD" >> "$GITHUB_OUTPUT"
         env:
