Build/Test Tools: Correct input name for Code Coverage reports.
The input for providing files to the `codecov/codecov-action` was changed from `file` to `files` in version `5.0.0`.

See #62221.

git-svn-id: https://develop.svn.wordpress.org/trunk@59717 602fd350-edb4-49c9-b593-d223f7449a82

--- a/.github/workflows/reusable-phpunit-tests-v3.yml
+++ b/.github/workflows/reusable-phpunit-tests-v3.yml
@@ -235,7 +235,7 @@ jobs:
         uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5.3.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: wp-code-coverage${{ inputs.multisite && '-multisite' || '-single' }}-${{ github.sha }}.xml
+          files: wp-code-coverage${{ inputs.multisite && '-multisite' || '-single' }}-${{ github.sha }}.xml
           flags: ${{ inputs.multisite && 'multisite' || 'single' }},php
           fail_ci_if_error: true
 
